# ppc-2025-processes-informatics

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: pre-commit.yml
cmake/: functions.cmake
scoreboard/: main.py
tasks/: CMakeLists.txt
tasks/egorova_l_a_broadcast/: info.json
tasks/kutergin_v_reduce/tests/functional/: main.cpp
tasks/kutuzov_i_simpson_integration/tests/functional/: main.cpp
tasks/kutuzov_i_simpson_integration/tests/performance/: main.cpp
tasks/kutuzov_i_torus_grid/tests/functional/: main.cpp
tasks/kutuzov_i_torus_grid/tests/performance/: main.cpp
tasks/nikitina_v_max_elem_matr/tests/functional/: main.cpp
tasks/nikitina_v_trans_all_one_distrib/tests/functional/: main.cpp
tasks/rychkova_d_sum_matrix_columns/: info.json
tasks/telnov_strongin_algorithm/: info.json
